# py-waveshare

./: .gitignore  LICENSE  README.md  epd_2in13_V3_test.py  epd_2in13b_V3_test.py  install.sh  main.py  pyproject.toml  run.sh
resources/: spleen-5x8.pbm
server/: views.py
server/templates/: data.html  downloader.html
