[tool.poetry]
name = "py-waveshare"
version = "0.1.0"
description = ""
authors = ["Rob Sparks <robert.william.sparks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
Flask = "^2.0.3"
yt-dlp = "^2022.2.4"
inotify-simple = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
